[project]
name = "example_tool"
version = "0.1.2"
description = "This is a simple tool that returns the answer."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2,<3)"
]
readme = "README.md"

[tool.poetry]
packages = [{include = "example_tool"}]


[project.entry-points."tool.entrypoint"]
example-tool = "example_tool.ray_entrypoint:main"


[tool.poetry.group.dev.dependencies]
ray = {extras = ["serve"], version = "^2.42.1"}
pytest = "^8.3.4"
ruff = "^0.11.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PIE", "PYI", "RSE", "RET", "SIM", "PTH"]
ignore = [
    "E501",  # Line too long
    "N806",  # Variable name should be lowercase
    "N803",  # Argument name should be lowercase
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"